syntax = "proto3";

package common.location.v1;

option go_package = "example/gen/common/location/v1";

// Address represents a physical address
message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip_code = 4;
  string country = 5;
}
